src/objects/Interconnection_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Counter_Signed_by_Utility__c</fullName>
        <inlineHelpText>Date on contract of counter-signature by utility</inlineHelpText>
        <label>Agreement Counter-Signed by Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Iteration__c</fullName>
        <label>Agreement Iteration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Amendment 1</fullName>
                </value>
                <value>
                    <fullName>Amendment 2</fullName>
                </value>
                <value>
                    <fullName>Amendment 3</fullName>
                </value>
                <value>
                    <fullName>Amendment 4</fullName>
                </value>
                <value>
                    <fullName>Amendment 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Notes__c</fullName>
        <label>Agreement Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Payment_Act__c</fullName>
        <label>Agreement Payment Act</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Payment_Est__c</fullName>
        <label>Agreement Payment Est</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Received_Act__c</fullName>
        <label>Agreement Received Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Received_Est__c</fullName>
        <label>Agreement Received Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_Agreement_Sent__c</fullName>
        <inlineHelpText>Date executed agreement sent to utility</inlineHelpText>
        <label>Executed Agreement Sent</label>
        <type>Date</type>
    </fields>
    <label>Interconnection Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ISA-{00000}</displayFormat>
        <label>Interconnection Agreement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interconnection Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>